chore: initialized project meta.

--- a/.github/config/release-please-config.json
+++ b/.github/config/release-please-config.json
@@ -1,7 +1,7 @@
 {
   "packages": {
     ".": {
-      "release-type": "python"
+      "release-type": "go"
     }
   },
   "pull-request-title-pattern": "chore${scope}: PR for release${component} ${version}",
