chore(ci): added inputs to workflows.

--- a/.github/workflows/.main.yaml
+++ b/.github/workflows/.main.yaml
@@ -10,3 +10,5 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: hwakabh/semantic-issue-action@v0.0.1
+        with:
+          repo: 'hwakabh/semantic-issue-action'
