--- a/.github/config/release-please-config.json
+++ b/.github/config/release-please-config.json
@@ -1,18 +1,18 @@
 {
   "packages": {
     ".": {
-      "release-type": "node"
+      "release-type": "node",
+      "extra-files": [
+        {
+          "type": "generic",
+          "path": ".github/workflows/.main.yaml"
+        }
+      ]
     }
   },
   "pull-request-title-pattern": "chore${scope}: PR for release${component} ${version}",
   "pull-request-header": ":robot: Release PR",
   "pull-request-footer": "This PR was generated with [Release Please](https://github.com/googleapis/release-please) with customized. See [schemas](https://github.com/googleapis/release-please/blob/main/schemas/config.json) for more information.",
   "draft-pull-request": true,
-  "extra-label": "releases,docs",
-  "extra-files": [
-    {
-      "type": "generic",
-      "path": ".github/workflows/.main.yaml"
-    }
-  ]
+  "extra-label": "releases,docs"
 }
