--- a/.github/config/release-please-config.json
+++ b/.github/config/release-please-config.json
@@ -3,10 +3,7 @@
     ".": {
       "release-type": "node",
       "extra-files": [
-        {
-          "type": "generic",
-          "path": ".github/workflows/.main.yaml"
-        }
+        ".github/workflows/.main.yaml"
       ]
     }
   },
