--- a/.github/config/release-please-config.json
+++ b/.github/config/release-please-config.json
@@ -3,7 +3,11 @@
     ".": {
       "release-type": "node",
       "extra-files": [
-        ".github/workflows/.main.yaml"
+        {
+          "type": "yaml",
+          "path": ".github/workflows/.main.yaml",
+          "jsonpath": "$.jobs.test-action.steps[1].uses"
+        }
       ]
     }
   },
