--- a/.github/workflows/.main.yaml
+++ b/.github/workflows/.main.yaml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: hwakabh/semantic-issue-action@v0.1.0
+      - uses: ./
         with:
           repo: 'hwakabh/semantic-issue-action'
+          token: ${{ secrets.GITHUB_TOKEN }}
