--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
+    "@conventional-commits/parser": "^0.4.1",
     "@vercel/ncc": "^0.38.3"
   }
 }
