--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
-    "@conventional-commits/parser": "^0.4.1",
+    "@conventional-commits/parser": "^0.4.1"
+  },
+  "devDependencies": {
     "@vercel/ncc": "^0.38.3"
   }
 }
