--- a/action.yml
+++ b/action.yml
@@ -27,5 +27,5 @@ runs:
   using: 'node20'
   main: 'dist/index.js'
 branding:
-  icon: 'github'
-  color: 'green'
+  icon: 'check-circle'
+  color: 'white'
