--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript GitHub Actions for Semantic Issue",
   "main": "index.js",
   "scripts": {
-    "build": "ncc build index.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -18,6 +18,8 @@
     "@conventional-commits/parser": "^0.4.1"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.38.3"
+    "@types/node": "^22.13.1",
+    "@vercel/ncc": "^0.38.3",
+    "typescript": "^5.7.3"
   }
 }
