--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript GitHub Actions for Semantic Issue",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && ncc build dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
