--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -8,12 +8,14 @@ on:
 
 permissions:
   contents: write
+  issue: write
   pull-requests: write
 
 jobs:
   release-please:
     runs-on: ubuntu-24.04
     steps:
+      # https://github.com/googleapis/release-please-action
       - uses: googleapis/release-please-action@v4
         with:
           manifest-file: .release-please-manifest.json
