--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -18,5 +18,6 @@ jobs:
       # https://github.com/googleapis/release-please-action
       - uses: googleapis/release-please-action@v4
         with:
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
           manifest-file: .release-please-manifest.json
           config-file: '.github/config/release-please-config.json'
